--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ keras==2.12.0
 matplotlib==3.5.2
 mypy==0.950
 notebook==6.4.11
-nrel-pysam==3.0.2
+nrel-pysam
 numba==0.55.2
 numcodecs==0.13.0
 numpy==1.22.3
